# pauth

./: .gitignore  LICENSE  README.md  Taskfile.dist.yml  buf.gen.yaml  buf.yaml  go.mod  go.sum  interceptors.go  package-lock.json  package.json  pauth.go  service.go  sessions.go  storage.go
functional-tests/: pyproject.toml
functional-tests/src/functionaltests/: util.py
functional-tests/src/functionaltests/tests/auth/: test_pauth.py
internal/cmd/: service.go
internal/service/: passwords.go  roles.go  service.go  sessions.go  sessions_basic_auth.go  sessions_connect.go
internal/storage/: interface.go  memory.go  models.go  postgres.go  storage_integration_test.go
internal/storage/postgres-migrations/: 20260209160051_initial.down.sql  20260209160051_initial.up.sql
protos/pauth/v1beta1/: service.proto  struct.proto
