[project]
name = "functionaltests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nic Johnson", email = "nicjohnson145@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "betterproto2==0.9.0",
    "pauth",
    "grpcio>=1.76.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "testfixtures>=10.0.0",
]

[tool.uv.sources]
pauth = { path = "../gen/python", editable = true }

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
